Fix Bug #19368 Failure in "flush_instances" causes assert in Thread_registry

Stop guardian and all the rest of threads before shutdown in case of an error